<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   tools:context=".ui.control.ControlFragment"
>
    <TextView
            android:id="@+id/title_live_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_live_data"
    />

    <TextView
            android:id="@+id/temperature_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/title_live_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/temperature"
    />

    <TextView
            android:id="@+id/humidity_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/temperature_now"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/humidity"
    />

    <TextView
            android:id="@+id/fan_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/humidity_now"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/fan_status"
    />

    <TextView
            android:id="@+id/title_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/fan_status_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_control"
    />

    <TextView
            android:id="@+id/fan_control_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_control"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>